# nachomud

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  TERMS.md  abilities.py  agent.py  combat.py  config.py  effects.py  engine.py  llm.py  main.py  memory.py  mob_ai.py  models.py  narrator.py  pyproject.toml  requirements.txt  run.sh  world.py
data/: world.json
data/memories/: finn.json  kael.json  lyria.json
data/worlds/: emberhollows.json  frostpeak.json  serpentmire.json  shadowfell.json
docs/: openapi.json
nachomud/: models.py  server.py  settings.py  style.py
nachomud/ai/: agents.py  dm.py  llm.py  npc.py  runner.py  world_gen.py
nachomud/auth/: accounts.py  magic_link.py
nachomud/characters/: character.py  creation.py  effects.py  leveling.py  migrations.py  player_migrations.py  save.py
nachomud/combat/: abilities.py  encounter.py
nachomud/engine/: game.py  session.py
nachomud/rules/: classes.py  dice.py  leveling.py  races.py  stats.py
nachomud/world/: directions.py  factions.py  loop.py  map.py  mobs.py  routines.py  starter.py  store.py  transcript_log.py
neatMUD/kinchoMUD/: .cproject  .project
neatMUD/rtNEAT/: .cproject  .project  Makefile  neat.h  neatmain.cpp  rtneat  species.cpp
tests/: conftest.py  test_abilities.py  test_agent.py  test_combat.py  test_effects.py  test_engine.py  test_equip_and_dm_actions.py  test_equipment.py  test_initiative.py  test_mob_ai.py  test_server.py  test_shop.py  test_world_data.py
tests/ai/: test_dm.py  test_dm_actions.py  (+5 more)
web/: client.js  index.html
(+183 files in other folders)
